# delegate

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  local_build.sh
doc/: delegate.md  mem_fkn.md
include/delegate/: delegate.hpp
test/: delegate_test.cpp
